Fixed: Select boxes look broken on Android ICS. Fixed by removing border-radius from them.

--- a/forum/styles/green/mobile.css
+++ b/forum/styles/green/mobile.css
@@ -216,6 +216,7 @@ body {
 #thread_view li .select,
 #thread_mark_read li .select,
 #folder_view li .select {
+    border-radius: 0;
     width: 100%;
 }
 
